--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+# Konfiguracja bazy danych
+spring.datasource.url=jdbc:mysql://localhost:3306/spring-demo?servertTimezone=UTC&useUnicode=true&characterEncoding=utf8
+spring.datasource.username=root
+# Has³a nie mamy
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# Konfiguracja JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+
+# Konfiguracja bezpieczeñstwa
+spring.security.user.name=admin
+spring.security.user.password=admin
+spring.security.user.roles=USER\
+  ADMIN
