--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.security.user.name=admin
 spring.security.user.password=admin
 spring.security.user.roles=USER\
   ADMIN
+
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual.creation=
