--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,19 @@
 # Konfiguracja bazy danych
-spring.datasource.url=jdbc:mysql://localhost:3306/spring-demo?servertTimezone=UTC&useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:h2:mem:spring-demo
 spring.datasource.username=root
 # Has³a nie mamy
 spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.h2.Driver
 
 # Konfiguracja JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 
-# Konfiguracja bezpieczeñstwa
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Konfiguracja bezpieczeñstwa`
 spring.security.user.name=admin
 spring.security.user.password=admin
 spring.security.user.roles=USER\
