Aktualizacja Rejestracja1 na h2

--- a/pom.xml
+++ b/pom.xml
@@ -78,5 +78,10 @@
 			<url>https://repo.spring.io/milestone</url>
 		</pluginRepository>
 	</pluginRepositories>
+	<dependency>
+		<groupId>org.springframework.security</groupId>
+		<artifactId>spring-security-taglibs</artifactId>
+		<version>5.0.6.RELEASE</version>
+	</dependency>
 
 </project>
