--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # Konfiguracja bazy danych
 spring.datasource.url=jdbc:h2:mem:spring-demo
-spring.datasource.username=root
+spring.datasource.username=User1
 # Has³a nie mamy
-spring.datasource.password=
+spring.datasource.password=user
 spring.datasource.driver-class-name=org.h2.Driver
 
 # Konfiguracja JPA/Hibernate
