Aktualizacja Rejestracja/wystawianie ogłoszeń. poprawione na jsp 15.09.19

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 # Konfiguracja bazy danych
 spring.datasource.url=jdbc:h2:mem:spring-demo
 spring.datasource.username=User1
-# Has³a nie mamy
+server.port=9090
+# Has³o mamy
 spring.datasource.password=user
 spring.datasource.driver-class-name=org.h2.Driver
+
 
 # Konfiguracja JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
