--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,5 +21,8 @@ spring.security.user.password=admin
 spring.security.user.roles=USER\
   ADMIN
 
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual.creation=
